--- a/views/home.erb
+++ b/views/home.erb
@@ -1,1 +1,5 @@
 <h1>Welcome to Hogwarts</h1>
+
+<div id="hogwartsCrest">
+<img src="/images/hogwarts.png" alt="hogwarts crest" id="hogwartsImage">
+</div>
