--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,9 +11,9 @@
 
 <nav>
   <ul>
-    <li><a href="/home">Home</a></li>
-    <li><a href="/students">Student Roster</a></li>
-    <li><a href="/students/new">Register Student</a></li>
+    <li><button class="navButton"><a href="/home">Home</a></button></li>
+    <li><button class="navButton"><a href="/students">Student Roster</a></button></li>
+    <li><button class="navButton"><a href="/students/new">Register Student</a></button></li>
   </ul>
 </nav>
 
