--- a/views/students.erb
+++ b/views/students.erb
@@ -1,8 +1,17 @@
 <h1>Student Roster</h1>
 
+<div id="studentContainer">
 <% @students.each do |student| %>
-  <p>Name: <%=student.full_name()%></p>
-  <p>House: <%student.house%></p>
-  <p>Age: <%=student.age()%></p>
-  <hr/>
+<div class="student">
+  <div>
+    <p>Name: <%=student.full_name()%></p>
+    <p>House: <%=student.house.name()%></p>
+    <p>Age: <%=student.age()%></p>
+    <p>----------------</p>
+  </div>
+  <div>
+    <img class="houseCrest" src="<%=student.house.logo()%>" alt="logo" >
+  </div>
+</div>
   <% end %>
+</div>
