--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,7 +12,7 @@
 <nav>
   <ul>
     <li><button class="navButton"><a href="/home">Home</a></button></li>
-    <li><button class="navButton"><a href="/students">Student Roster</a></button></li>
+    <li><button class="navButton"><a href="/students">View all Students</a></button></li>
     <li><button class="navButton"><a href="/students/new">Register Student</a></button></li>
   </ul>
 </nav>
