--- a/views/new.erb
+++ b/views/new.erb
@@ -1,3 +1,7 @@
+<h1>New Students</h1>
+<p>Enrolment Form</p>
+
+<div id="form">
 <form class="register" action="/students" method="post">
 
 <div>
@@ -29,3 +33,4 @@
 <div>
 
 </form>
+</div>
